# stippling

./: add.txt
hedcuter/code/: CMakeLists.txt  hedcut.cpp  hedcut.h  main.cpp  wcvt.cpp  wcvt.h  wcvt_gpu.cpp
hedcuter/code/vc_files/: hedcut.vcxproj
hedcuter/code/vc_files/x64/Release/hedcut.tlog/: cl.command.1.tlog  cl.read.1.tlog  cl.write.1.tlog  hedcut.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
hedcuter/images/Part2/Q4/: variables.txt
lib64/: glew32.exp  glew32.lib  glew32s.lib  glut32.lib
report/: report.aux  report.bbl  report.bib  report.bib.bak  report.brf  report.out  report.synctex  report.synctex(busy)  report.tex  report.tex.bak  report.tex.sav
report/FIGS/: copy.psd
voronoi/picopng/Release/picopng.tlog/: CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  cl.command.1.tlog  lib.command.1.tlog
voronoi/stippler/Release/stippler.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  stippler.lastbuildstate  stippler.write.1u.tlog
voronoi/voronoi/: voronoi.cpp
voronoi/voronoi/Release/: voronoi.vcxprojResolveAssemblyReference.cache
voronoi/voronoi/Release/voronoi.tlog/: CL.read.1.tlog  cl.command.1.tlog  cl.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
